# translation-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: index.html  script.js  styles.css
src/: config.py  exceptions.py  main.py
src/api/: deps.py
src/api/endpoints/: detect.py  translate.py
src/core/: detection.py  detector.py  translation.py  translator.py  translator_model.py
src/services/: detection_service.py  translation_service.py
src/utils/: language_utils.py
tests/api/endpoints/: test_detect.py  test_translate.py
tests/core/: test_detection.py  test_detector.py  test_translation.py  test_translator.py  test_translator_model.py
tests/services/: test_detection_service.py  test_translation_service.py
tests/utils/: test_language_utils.py
